manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "wordpresscluster-c8f0"
    labels:
        app: "wordpresscluster-c8f0"
spec:
    type: ClusterIP
    ports:
    - port: 443
      targetPort: 443
      protocol: TCP
      name: http
    selector:
        app: "wordpresscluster-c8f0"
